feat: update the dashboard controllers
